--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -1,3 +1,12 @@
 <resources>
     <string name="app_name">WallpaperApp</string>
+    <string name="loginPreferencesConfigLoginStatus">com.xxluciferinxx.wallpaperapp.preferences.loginStatus</string>
+
+    <string name="login_page">Login Page</string>
+
+    <string name="email">email</string>
+    <string name="password">Password</string>
+    <string name="login">Login</string>
+    <string name="logout">Logout</string>
+    <string name="home_fragment">Home Fragment</string>
 </resources>
